# rulesxp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SUPPORT.md  index.html
.azuredevops/: azure-pipelines-pr.yml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  cross-platform.yml  fuzz.yml  mutants.yml  release.yml
benches/: bench_main.rs
dev/bench/: data.js
docs/: MAINTAINERS-GUIDE.md
examples/: demo.rs  repl.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: eval_jsonlogic.rs  eval_sexpr.rs
src/: ast.rs  builtinops.rs  evaluator.rs  jsonlogic.rs  lib.rs  parser.rs  scheme.rs
src/evaluator/: intooperation.rs
tests/: integration_tests.rs  jsonlogic_conformance.rs  test_jsonlogic_integration.rs  tests.txt
