[package]
name = "rulesxp"
version = "0.3.0"
edition = "2024"
rust-version = "1.90"
description = "Multi-language rules expression evaluator supporting JSONLogic and Scheme with strict typing"
authors = ["Eugene Talagrand"]
license = "MIT"
repository = "https://github.com/microsoft/rulesxp"
keywords = ["jsonlogic", "scheme", "expression", "evaluator", "rules"]
categories = ["parsing", "compilers"]

[features]
default = []
scheme = []
jsonlogic = ["dep:serde_json"]

[[example]]
name = "demo"
required-features = ["scheme", "jsonlogic"]

[[example]]
name = "repl"
required-features = ["scheme", "jsonlogic"]

[dependencies]
nom = "8.0"
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rustyline = "17.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
required-features = ["scheme", "jsonlogic"]

[lints.clippy]
unwrap_used = "warn"
uninlined_format_args = "warn"
unnecessary_to_owned = "warn"
manual_assert = "warn"
allow_attributes = "warn"
redundant_clone = "warn" # in nursery
index_refutable_slice = "warn"
clone_on_ref_ptr = "warn"
indexing_slicing = "warn"
string_slice = "warn"

[package.metadata.docs.rs]
all-features = true


[profile.release]
# Optimize for size
opt-level = "z"     # Optimize for size instead of speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation
strip = true        # Remove debug symbols
